--- a/Skill.html
+++ b/Skill.html
@@ -28,7 +28,7 @@
     <!-- เมนู -->
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#"><img src="images/me.png" alt="" class="rounded-pill me-2 " style="width: 30px;"  > Resume</a> 
+      <a class="navbar-brand" href="#"><img src="src/images/tol1.jpg" alt="" class="rounded-pill me-2 " style="width: 30px;"  > Resume</a> 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -59,7 +59,7 @@
 <!-- <--grid card--> -->
     <div class="card-group container me-auto ms-auto mt-5 mb-5">
         <div class="card border-primary">
-          <img src="images/html.png" class="card-img-top" alt="...">
+          <img src="src/images/html.png" class="card-img-top" alt="...">
           <div class="card-body ">
             <h5 class="card-title">HTML</h5>
             <p class="card-text">Able to write basic programs</p>
@@ -67,7 +67,7 @@
           </div>
         </div>
         <div class="card border-primary">
-          <img src="images/css.JPG" class="card-img-top" alt="...">
+          <img src="src/images/css.JPG" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">CSS</h5>
             <p class="card-text">Able to write basic programs</p>
@@ -75,7 +75,7 @@
           </div>
         </div>
         <div class="card border-primary">
-           <img src="images/tol14.jpg " class="card-img-top" alt="..."> 
+           <img src="src/images/tol14.jpg " class="card-img-top" alt="..."> 
           <div class="card-body">
             <h5 class="card-title">i can singing</h5>
             <p class="card-text">i can play mucic too guitar and singing together.</p>
