--- a/education.html
+++ b/education.html
@@ -28,7 +28,7 @@
   <!-- เมนู -->
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#"><img src="images/me.png" alt="" class="rounded-pill me-2 " style="width: 30px;"  > Resume</a> 
+      <a class="navbar-brand" href="#"><img src="src/images/tol1.jpg" alt="" class="rounded-pill me-2 " style="width: 30px;"  > Resume</a> 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -60,7 +60,7 @@
 <div class="row row-cols-1 row-cols-md-2 g-4 container me-auto ms-auto mt-4 mb-4">
   <div class="col">
     <div class="card">
-      <img src="images/ut.jpg" class="card-img-top" alt="...">
+      <img src="src/images/ut.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Vocational Certificate</h5>
         <p class="card-text">U-Thong School It is a large secondary school in U-Thong District. Suphanburi Province It is a school united campus, Suphan Buri Tarawadee. Currently, there is an area of ​​45 rai. Open for teaching from junior high school level. high school and vocational </p>
@@ -69,7 +69,7 @@
   </div>
   <div class="col">
     <div class="card">
-      <img src="images/npru.jpg" class="card-img-top" alt="...">
+      <img src="src/images/npru.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">ฺbachelor Degree</h5>
         <p class="card-text">Nakhon Prathom Rajabhat University</p>
